Working consul ui

--- a/templates/consul-nginx.conf.j2
+++ b/templates/consul-nginx.conf.j2
@@ -27,7 +27,7 @@ server {
 
   # --- logging ---------------------------------------------------------------
 
-  error_log /var/log/nginx/error-consul.log;
-  access_log /var/log/nginx/access-consul.log;
+  error_log /var/log/nginx/consul.error.log;
+  access_log /var/log/nginx/consul.access.log;
 
   }
